--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-16 16:00+0200\n"
+"POT-Creation-Date: 2024-07-21 23:19+0200\n"
 "PO-Revision-Date: 2024-06-29 16:13+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -351,7 +351,7 @@ msgid ""
 "    Please refer to the encounter rules specified in the rules of the selected Dragon Boss.\n"
 "  \\item While fighting a Dragon Boss, ignore Gorgon's special ability.\n"
 "  \\item Heroes are unable to retreat from battles with the Dragon Boss.\n"
-"  \\item When each player visits an Obelisk, they can choose to roll a Treasure die or receive 1 Experience Point.\n"
+"  \\item When each player visits an Obelisk, they can choose to roll a Treasure die or receive 1 \\svg{experience}.\n"
 "  \\item Players can visit each Obelisk only once.\n"
 "    Afterwards, they must place their Faction cube on the field.\n"
 "  \\item In the boss encounter, there is no battle round limit.\n"
@@ -364,7 +364,7 @@ msgstr ""
 "    Zapoznaj się z zasadami walki określonymi w zasadach wybranego Smoka.\n"
 "  \\item Podczas walki ze Smokiem zignoruj zdolność specjalną Gorgon.\n"
 "  \\item Bohaterowie nie mogą wycofać się z walk ze Smokiem.\n"
-"  \\item Gdy gracze odwiedzają Obelisk, może wybrać rzut Kością Skarbów albo otrzymać 1 Punkt Doświadczenia.\n"
+"  \\item Gdy gracze odwiedzają Obelisk, mogą wybrać rzut Kością Skarbów albo otrzymać 1 \\svg{experience}.\n"
 "  \\item Gracze mogą odwiedzić każdy Obelisk tylko raz.\n"
 "    Następnie muszą umieścić swoją Kostkę Frakcji na polu.\n"
 "  \\item W walce ze Smokiem nie ma limitu rund walki.\n"
@@ -520,7 +520,7 @@ msgid ""
 "Golem per turn.  \\end{itemize} \\item Golem Abilities: Gold and Diamond "
 "Golems do not possess any additional abilities beyond those specified on "
 "their cards.  They primarily serve as fodder for the Crystal Dragon's health "
-"regeneration.  \\item The Crystal Dragon \\textit{counterattacks twice} per "
+"regeneration.  \\item The Crystal Dragon \\textit{retaliates twice} per "
 "battle round.  \\end{itemize} }"
 msgstr ""
 "{ \\textbf{\\MakeUppercase{Boss: Kryształowy Smok}} \\medskip \\\\"
@@ -563,9 +563,9 @@ msgid ""
 "\\textbf{Impossible}}\\\\ \\lightcell[2.8]{No additional\\\\changes} & "
 "\\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
 "{\\images/hp.png}} 22} & \\lightcell[2.8]{{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 26 \\\\ +1 Counterattack}} "
-"& \\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
-"{\\images/hp.png}} 32 \\\\ +1 Counterattack \\\\ Remove additional 2 "
+"{\\includegraphics[height=15px]{\\images/hp.png}} 26 \\\\ +1 Retaliation}} & "
+"\\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
+"{\\images/hp.png}} 32 \\\\ +1 Retaliation \\\\ Remove additional 2 "
 "\\svg{damage-table} by consuming Golems} \\\\ \\end{tabularx} }"
 msgstr ""
 "\\hommtable[]{10}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
