Special thanks to Scenario map editor

--- a/sections/credits.tex
+++ b/sections/credits.tex
@@ -15,7 +15,8 @@ You should check it out if you haven't seen it yet.
 
 \phantom{Translators placeholder}
 
-\textbf{Special thanks}: Everyone from Archon Studio, for producing the game and answering our incessant queries about rules and other topics.
+\textbf{Special thanks}: Patrick Kersten for \href{https://zedero.github.io/HoMM3BoardgameScenarioEditor/}{Scenario map editor}.
+Everyone from Archon Studio, for producing the game and answering our incessant queries about rules and other topics.
 Jon Van Caneghem and everyone involved with the development of the original video game.
 Everyone who has supported the project with suggestions, corrections, image resources, and words of encouragement either on Discord or BoardGameGeek.
 
