--- a/metadata.tex
+++ b/metadata.tex
@@ -51,6 +51,9 @@
 \usepackage{xifthen}
 \usepackage{xparse}
 
+\usepackage{tocloft}
+\renewcommand{\cftsubsecpagefont}{\bfseries}
+
 \usepackage[hang, symbol, perpage]{footmisc}
 \renewcommand{\footnotemargin}{1em}
 
