--- a/translations/inferno_deal_with_the_devil.tex/cs.po
+++ b/translations/inferno_deal_with_the_devil.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-28 15:06+0200\n"
+"POT-Creation-Date: 2024-07-28 00:20+0200\n"
 "PO-Revision-Date: 2024-07-02 09:52+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -114,6 +114,8 @@ msgid ""
 "\\textbf{Author:} Tm335\n"
 "\n"
 msgstr ""
+"\\textbf{Autor:} Tm335\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:18
@@ -124,6 +126,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Scenario length}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Délka Scénáře}}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:24
@@ -134,6 +138,8 @@ msgid ""
 "\\textbf{Faction:} Inferno\n"
 "\n"
 msgstr ""
+"\\textbf{Frakce:} Peklo\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:26
@@ -144,6 +150,8 @@ msgid ""
 "\\textbf{Faction Hero:} Choose any\n"
 "\n"
 msgstr ""
+"\\textbf{Hrdina Frakce:} Libovolný\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:29
@@ -154,6 +162,9 @@ msgid ""
 "\\resources{15}{3}{1}\n"
 "\n"
 msgstr ""
+"\\textbf{Počáteční Suroviny:}\\par\n"
+"\\resources{15}{3}{1}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:34
@@ -164,6 +175,8 @@ msgid ""
 "\\textbf{Starting Units:}\n"
 "\n"
 msgstr ""
+"\\textbf{Počáteční Jednotky:}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:52
@@ -174,6 +187,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{AI hero setup}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Příprava AI Hrdiny}}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:69
@@ -184,6 +199,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Map setup}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Příprava Mapy}}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:98
@@ -194,6 +211,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Heroes placement}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Umístění Hrdinů}}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:155
@@ -204,6 +223,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Additional rules}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Dodatečná Pravidla}}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:157
@@ -214,6 +235,8 @@ msgid ""
 "During this ``Inferno'' campaign scenario, the following rules apply:\n"
 "\n"
 msgstr ""
+"Během tohoto scénáře kampaně \\uv{Peklo} platí následující pravidla:\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_steadwicks_fall.tex:78
@@ -223,6 +246,8 @@ msgid ""
 "Take the following Map tiles and set them up as shown in the scenario map layout:\n"
 "\n"
 msgstr ""
+"Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři:\n"
+"\n"
 
 #.  !TeX spellcheck = en_US
 #. type: Plain text
@@ -231,6 +256,8 @@ msgid ""
 "\\addscenariosection[subsection]{1}{Inferno Campaign $-$ Dungeons and Devils}"
 "{3. Deal With The Devil}{\\images/firewall.png}"
 msgstr ""
+"\\addscenariosection[subsection]{1}{Kampa\\v{n} Peklo $-$ Kobky a Ďáblové}"
+"{3. Dohoda s Ďáblem}{\\images/firewall.png}"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:9
@@ -239,6 +266,8 @@ msgid ""
 "\\textbf{Source:} \\href{https://discord.com/channels/740870068178649108/1253923753981902939/1253923753981902939}{Archon Studios Discord}\n"
 "\n"
 msgstr ""
+"\\textbf{Zdroj:} \\href{https://discord.com/channels/740870068178649108/1253923753981902939/1253923753981902939}{Archon Studios Discord}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:18
@@ -254,6 +283,15 @@ msgid ""
 "Prepare for battle!}\n"
 "\n"
 msgstr ""
+"\\textit{Královna Catherine osvobodila Steadwick.\n"
+"Vyslanec Kreeganů byl poslán na královský dvůr s požadavkem na výkupné ve výši jednoho milionu zlatých za zajatce, kterého držíme, krále Rolanda Ironfista z Erathie.\n"
+"Odmítli zaplatit.\n"
+"Zdá se, že se pokusí Rolanda zachránit.\n"
+"Jsme hluboko v Eeofolu.\n"
+"Jsme klan Kreelah.\n"
+"Nikdy nezískají našeho zajatce a nikdy nezískají Kleesive.\n"
+"Připravte se na bitvu!}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:22
@@ -262,6 +300,8 @@ msgid ""
 "This scenario plays out over 14 rounds.\n"
 "\n"
 msgstr ""
+"Tento scénář se hraje na 14 kol.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:42
@@ -274,6 +314,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Málo Magogů\n"
+"  \\item Skupina Rarášků\n"
+"  \\item Skupina Kerberů\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:44
@@ -290,6 +336,8 @@ msgid ""
 "\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling, \\svgunit{silver} Dwelling, City Hall, Citadel\n"
 "\n"
 msgstr ""
+"\\textbf{Městské Budovy:} \\svgunit{bronze} Obydlí, \\svgunit{silver} Obydlí, Radnice, Citadela\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:48
@@ -298,6 +346,8 @@ msgid ""
 "\\textbf{Bonus:} Add a ``war machine'' of your choice to your hand.\n"
 "\n"
 msgstr ""
+"\\textbf{Bonus:} Vezmi si do ruky libovolný \\uv{Válečný Stroj}.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:52
@@ -306,6 +356,8 @@ msgid ""
 "\\textbf{Faction:} Castle, Rampart\n"
 "\n"
 msgstr ""
+"\\textbf{Frakce:} Hrad, Bašta\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:54
@@ -314,6 +366,8 @@ msgid ""
 "\\textbf{Rampart Charging Army \\#1:} A Few Centaurs, a Pack of Dwarves, a Pack of Elves, a Pack of Pegasi, a Few Unicorn\n"
 "\n"
 msgstr ""
+"\\textbf{Útočící Armáda Bašty \\#1:} Málo Kentaurů, Skupina Trpaslíků, Skupina Elfů, Skupina Pegasů, Málo Jednorožců\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:56
@@ -322,6 +376,8 @@ msgid ""
 "\\textbf{Castle Charging Army \\#1:} A Pack of Marksmen, a Pack of Elves, a Few Griffins, a Pack of Zealots, a Few Champions\n"
 "\n"
 msgstr ""
+"\\textbf{Útočící Armáda Hradu \\#1:} Skupina Střelců, Skupina Elfů, Málo Gryfů, Skupina Fanatiků, Málo Šampionů\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:58
@@ -330,6 +386,8 @@ msgid ""
 "\\textbf{Rampart Charging Army \\#2:} A Pack of Dwarves, a Pack of Elves, a Few Pegasi, a Pack of Dendroids, a Pack of Unicorns\n"
 "\n"
 msgstr ""
+"\\textbf{Útočící Armáda Bašty \\#2:} Skupina Trpaslíků, Skupina Elfů, Málo Pegasů, Skupina Dendroidů, Skupina Jednorožců\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:60
@@ -338,6 +396,8 @@ msgid ""
 "\\textbf{Castle Charging Army \\#2:} A Pack of Halberdiers, a Few Griffins, a Few Crusaders, a Pack of Zealots, a Pack of Champions\n"
 "\n"
 msgstr ""
+"\\textbf{Útočící Armáda Hradu \\#2:} Skupina Halapartníků, Málo Gryfů, Málo Křižáků, Skupina Fanatiků, Skupina Šampionů\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:62
@@ -346,6 +406,8 @@ msgid ""
 "\\textbf{Charging Armies \\#1 and \\#2 Deck:} 3 × Might card, 2 × Skill card\n"
 "\n"
 msgstr ""
+"\\textbf{AI Balíček Útočících Armád \\#1 a \\#2:} 3~× Karta Síly, 3 × Karta Schopnosti\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:64
@@ -354,6 +416,8 @@ msgid ""
 "\\textbf{Charging Armies \\#1 and \\#2 Skill Deck:} 1 × ``Shield of the Damned'' Artifact card, 1 × ``Sword of Hellfire'' Artifact card\n"
 "\n"
 msgstr ""
+"\\textbf{Balíček Schopností Útočících Armád \\#1 a \\#2:} 1 × Karta Artefaktu \\uv{Štít Prokletých}, 1 × Karta Artefaktu \\uv{Meč Pekelného Ohně}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:66
@@ -362,6 +426,8 @@ msgid ""
 "\\textbf{Final Charging Army:} A Pack of Griffins, a Pack of Zealots, a Pack of Champions, a Pack of Unicorns, a Few Archangels, a ``Ballista'' war machine\n"
 "\n"
 msgstr ""
+"\\textbf{Finální Útočící Armáda:} Skupina Gryfů, Skupina Fanatiků, Skupina Šampionů, Skupina Jednorožců, Málo Archandělů, Válečný Stroj \\uv{Balista}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:68
@@ -370,6 +436,8 @@ msgid ""
 "\\textbf{Final Charging Army Deck:} 3 × Might card, 3 × Skill card\n"
 "\n"
 msgstr ""
+"\\textbf{Balíček Schopností Finální Útočící Armády:} 3 × Karta Síly, 3 × Karta Schopnosti\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:71
@@ -379,6 +447,9 @@ msgid ""
 "  1 × ``Ballistics'' Ability card (at Basic effect), 1 × ``First Aid'' Ability card (at Expert effect)\n"
 "\n"
 msgstr ""
+"\\textbf{Balíček Schopností/Dovedností Finální Útočící Armády:} 1 × Karta Artefaktu \\uv{Štít Prokletých}, 1 × Karta Artefaktu \\uv{Meč Pekelného Ohně},\n"
+"  1 × Karta Dovednosti \\uv{Balistika} (základní efekt), 1 × Karta Dovednosti \\uv{První pomoc} (expertní efekt)\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:73
@@ -387,6 +458,8 @@ msgid ""
 "Charging Armies \\#1 and \\#2 use the same AI deck and Skill deck. Reshuffle both decks after combat.\n"
 "\n"
 msgstr ""
+"Útočící Armády \\#1 a \\#2 používají stejný AI balíček a balíček Dovedností. Po boji oba balíčky zamíchejte.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:79
@@ -399,6 +472,11 @@ msgid ""
 "cards are not played again immediately, but instead are played as soon as the next unit is able to use them.\n"
 "\n"
 msgstr ""
+"Obě karty Artefaktů všech Útočících Armád jsou považovány za Dovednosti a používají \\uv{slabší} efekt uvedený na kartě.\n"
+"\\uv{Meč Pekelného Ohně} bude použit při Útocích a Odvetných Útocích. Není použit při Útocích na Zdi nebo Brány,\n"
+"a zůstává v platnosti na Jednotce. \\uv{Štít Prokletých} nabývá účinku, když\n"
+"jakákoliv Jednotka Útočící Armády utrpí zranění z Útoku nebo Odvetného Útoku. Pokud karta Dovednosti AI říká \\uv{udělej to znovu}, karty Artefaktů se nevyužívají ihned znovu, ale použijí se, jakmile je další Jednotka schopna je využít.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:90
@@ -412,6 +490,13 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{3 × Startovní (I) Dílek Mapy}\n"
+"\\begin{itemize}\n"
+"  \\item 1 × Peklo (S6)\n"
+"  \\item 1 × Hrad (S3)\n"
+"  \\item 1 × Bašta (S4)\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:97
@@ -425,6 +510,13 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{7 × Vzdálený (II--III) Dílek Mapy}\n"
+"\\begin{itemize}\n"
+"  \\item 3 × Peklo (F16, F17, F18)\n"
+"  \\item 3 × Hrad (F3, \\#F4, F6)\n"
+"  \\item 1 × Bašta (F12)\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:102
@@ -436,6 +528,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{1 × Blízký (IV--V) Dílek Mapy}\n"
+"\\begin{itemize}\n"
+"  \\item 1 × Peklo (N12)\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:106
@@ -444,6 +541,8 @@ msgid ""
 "The Enemy Charging Rampart Hero \\#1 starts on the center field of the S4 Starting Map tile.\n"
 "\n"
 msgstr ""
+"Nepřátelský Útočící Hrdina Bašty \\#1 začíná na středovém poli Startovního Dílku S4.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:108
@@ -452,6 +551,8 @@ msgid ""
 "The Enemy Charging Castle Hero \\#1 starts on the center field of S3 Starting Map tile.\n"
 "\n"
 msgstr ""
+"Nepřátelský Útočící Hrdina Hradu \\#1 začíná na poli Osady dílku F3 nebo na středovém poli Startovního Dílku S3.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:110
@@ -460,6 +561,8 @@ msgid ""
 "Place your Hero on the center field of the S6 Inferno Starting Map tile.\n"
 "\n"
 msgstr ""
+"Umístěte vašeho Hrdinu na středové pole Startovního Dílku S6 vaší Frakce.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:112
@@ -468,6 +571,8 @@ msgid ""
 "You cannot recruit a Secondary Hero.\n"
 "\n"
 msgstr ""
+"Nemůžete naverbovat Vedlejšího Hrdinu.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:116
@@ -476,6 +581,8 @@ msgid ""
 "Defend your main fortress, Kleesive, from all Charging Enemy Heros, and from the Final Charging Army.\n"
 "\n"
 msgstr ""
+"Braňte svou hlavní pevnost, Kleesiv, před všemi Útočícími Nepřátelskými Hrdiny a před Finální Útočící Armádou.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:120
@@ -484,6 +591,8 @@ msgid ""
 "You lose one Combat encounter with your Main Hero. Surrender is not an option.\n"
 "\n"
 msgstr ""
+"Prohrajete jeden Boj s vaším Hlavním Hrdinou. Kapitulace není možná.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:122
@@ -492,6 +601,8 @@ msgid ""
 "Clan Kreelah fails to defend Klessive against the Enemy Charging Heros attempting to rescue your captive King Roland.\n"
 "\n"
 msgstr ""
+"Klan Kreelah neuspěje v obraně Kleesivu proti Útočícím Nepřátelským Hrdinům, kteří se pokoušejí zachránit vašeho zajatého krále Rolanda.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:130
@@ -504,6 +615,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{1. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Přečtěte: \\uv{Královna Catherine odmítá naši žádost o výkupné a shromažďuje armády pro záchrannou\n"
+"    operaci. Klane Kreelah, připravte naši obranu! Chraňte Kleesiv za každou cenu. Máme výhodu.}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:137
@@ -517,6 +634,13 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{2. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Přečtěte: \\uv{Armády Hradu a AvLee budou brzy u našich bran. Musí projít přes vulkanický koridor\n"
+"    na našem východě. Nemůžeme se s nimi setkat v bitvě na otevřeném poli, musíme se bránit uvnitř Kleesivu, na této prokleté zemi, kde\n"
+"    je jejich magie oslabena.}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:143
@@ -529,6 +653,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{3. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Přečtěte: \\uv{Naši zvědové hlásí, že nepřítel získal 2 velmi mocné artefakty s pomocí místních věštců.\n"
+"    Jsou to blázni, pokud si myslí, že jim to pomůže překonat naši Kreeganskou pevnost.}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:148
@@ -540,6 +670,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{4. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item První armády zaútočí v tomto a následujícím kole. Připravte si obranu!\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:154
@@ -552,6 +687,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{7. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Nepřátelský Útočící Hrdina Hradu \\#2 se objeví na poli Osady dílku F3 nebo na středovém poli Startovního dílku S3.\n"
+"  \\item Nepřátelský Útočící Hrdina Bašty \\#2 se objeví na středovém poli Startovního dílku S4.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:161
@@ -563,6 +704,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{10. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Druhé armády zaútočí v tomto a následujícím kole. Připravte si obranu!\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:167
@@ -574,6 +720,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{12. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Finální Útočící Nepřátelská Armáda se objeví na poli Osady dílku F3. Tato armáda má 4 BP na kolo.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:172
@@ -585,6 +736,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{16. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Finální Útočící Armáda zaútočí v tomto kole. Musíme za každou cenu udržet Kleesiv!\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:177
@@ -596,6 +752,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Když dokončíte scénář:}\n"
+"\\begin{itemize}\n"
+"  \\item Přečtěte: \\uv{Gratulujeme! Ubránili jste Kleesiv a zvítězili jste!}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:204
@@ -625,6 +786,29 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Váš Hlavní Hrdina může cestovat pouze na Dílky Mapy Peklo. Nemůžete vstoupit na žádný jiný typ Dílku Mapy.\n"
+"  \\item Nemůžete útočit na Nepřátelské Útočící Hrdiny. Můžete se pouze bránit proti nim, pokud jste uvnitř Kleesivu.\n"
+"  \\item Získáte 3 \\svg{gold}, když porazíte Armádu Útočícího Hrdiny.\n"
+"  \\item Pokud Nepřátelský Útočící Hrdina vstoupí na Dílek Mapy nebo pole, na kterém je váš Hlavní Hrdina (výjimkou je, pokud jste ve\n"
+"    svém městě Kleesiv), nebo pokud útočí na Kleesiv a vy nejste přítomni ve svém městě\n"
+"    Kleesiv, budete okamžitě přeneseni zpět do Kleesivu, ztratíte zbývající Pohybové Body,\n"
+"    ztratíte 3 \\svg{gold}, získáte \\svg{morale_negative} a náhodně odhodíte 1 kartu z ruky.\n"
+"  \\item Nepřátelští Útočící Hrdinové se pohybují pouze o 2 BP. Konečná Útočící Armáda se pohybuje o 4 BP. Vydávají se po nejkratší\n"
+"    cestě do Kleesivu. Pokud vlastníte Důl na Dílku Mapy, do kterého vstoupí, obsadí Důl (ale nebudou\n"
+"    se vracet), a pak pokračují po nejkratší cestě do Kleesivu. Všechno ostatní ignorují.\n"
+"    Také využívají bonus 1 BP od Stájí.\n"
+"  \\item Nepřátelští Útočící Hrdinové se vždy pohybují tak, aby si navzájem neblokovali cesty (a tím se nezpomalovali).\n"
+"    Nepřátelský Útočící Hrdina, který se může dostat nejblíže ke Kleesivu, se pohybuje jako první.\n"
+"  \\item Hrad a Bašta již mají všechny Doly pod kontrolou ve svém území (na rozdíl od Pekla). Umístěte nepřátelské\n"
+"    kostičky na všechny jejich Doly.\n"
+"  \\item Vaše Zdi, Brány a Střílna v Kleesivu jsou po každém Boji zcela obnoveny.\n"
+"  \\item Nepřátelské \\svg{unit_flying} Jednotky přeletí přes Zdi a Brány, aby zaútočily na vaše Jednotky, kdykoli to bude možné.\n"
+"  \\item Nepřátelské \\svg{unit_ranged} Jednotky vždy zaútočí na Střílnu, jakmile nebudou k dispozici žádné jiné \\svg{unit_ranged} Jednotky.\n"
+"  \\item Nepřátelské Jednotky vždy zaútočí na vaše Jednotky, pokud je to možné. Pokud to není možné, zaútočí na Bránu,\n"
+"    a poté na Zdi.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:207
